# invoice-selfserve-mcpb

./: .gitignore  .mcp.json  Makefile  README.md  lessons-learned.md  manifest.json  pyproject.toml
.claude-plugin/: plugin.json
.claude/commands/: ap-review.md
ap_invoice_core/: __init__.py  engine.py  extraction.py  matchers.py  models.py  ocr_flow.py  ocr_smoke.py  reference.py  resolution.py  service.py
ap_invoice_mcp/: __init__.py  __main__.py  server.py
docs/: AP_INVOICE_CLAUDE_OCR_SMOKE_GONOGO_RUNBOOK.md  AP_INVOICE_MCPB_E2E_CLAUDE_OCR_TO_DECISION_SPEC.md  AP_INVOICE_SELF_SERVE_MCPB_HANDOFF.md  CLAUDE_DESKTOP_MULTI_PC_DEMO_RUNBOOK.md  DEMO_GUIDE_JA.md  README.md  VALIDATION.md
docs/archive/: README.md
samples/case-a-pay-ready/: goods_receipt.json  invoice.json
samples/case-b-po-mismatch/: goods_receipt.json
samples/case-c-duplicate/: invoice.json  purchase_order.json
samples/case-d-vendor-review/: expected-result.json  purchase_order.json
samples/case-f-tax-review/: expected-result.json  goods_receipt.json
scripts/: generate_ap_samples.py  package_ap_mcpb.py  package_ap_plugin.py  smoke_ap_mcp.py  verify_ap_data_boundary.py  verify_e2e_ocr_flow.py  verify_mcpb_contents.py  verify_no_answer_sidecars.py  verify_ocr_smoke_gate.py  verify_plugin_contents.py
tests/: helpers.py
tests/fixtures/: test_ap_fixtures.py
tests/golden/: test_ap_golden.py
tests/unit/: test_matchers.py  test_mcp_contract.py  test_ocr_smoke.py  test_resolution_pack.py  test_security_regressions.py  test_v2_ux_regression.py  test_v2_ux_tools.py
(+54 files in other folders)
